--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+setuptools==65.5.0
 flask==2.3.3
 flask-cors==4.0.0
 flask-sqlalchemy==3.0.5
@@ -5,4 +6,5 @@ pandas==1.5.3
 numpy==1.24.3
 scikit-learn==1.2.2
 xgboost==1.7.5
+tensorflow==2.13.0
 joblib==1.2.0
