--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: python backend/render_app.py
+    startCommand: python backend/app.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.11
